# drl

./: .gitignore  CMakeLists.txt
doc/: 思路.md
model_save/: actor.pth  critic.pth
scr/py/: ddpg.py  main.py
src/cpp/: buildInfo.mat  ert_main.cpp  flyBall.cpp  flyBall.h  flyBall_data.cpp  flyBall_private.h  flyBall_types.h
src/py/: ddpgTest.py  mainFlyBall.py  testFlyBall.py  testPybind.py
src/pybindDemo/: main.cpp
